@@ -1299,7 +1299,9 @@ Joerg Weber
      http://www.lavrsen.dk/twiki/bin/view/Motion/ReferenceFramePatch
    * Removed low_cpu feature.
    * Removed night_compensate feature
-   
+   * Implemented a new reference frame algorithm to improve object recognition and location.
+   * Improved smartmask feature: real moving objects don't trigger the mask anymore.
+
 Dirk Wesenberg
    * Track pan/tilt support for uvcvideo ( Michal Licko ,Dirk Wesenberg and Angel Carpintero )
      http://www.lavrsen.dk/twiki/bin/view/Motion/LinuxUvcTrackingPatch	
